# pydantic-csv

./: README.md  pyproject.toml
src/pydantic_csv/: typed_csv.py
tests/: test_pydantic_csv.py
tests/csv/: valid_csv.csv
