[tool.poetry]
name = "pydantic-csv"
version = "0.1.0"
description = "CSV reader with pydantic validation."
authors = ["Niels van Huijstee <niels@huijs.net>"]
license = "GNU LGPLv3"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
    "pydantic.mypy"
]

